prevent scrollbar appearing on spinners

--- a/frontend/src/components/JobList/JobList.module.css
+++ b/frontend/src/components/JobList/JobList.module.css
@@ -97,9 +97,10 @@
     padding: 0;
 
     /*max-height: 100%;*/
-    overflow: scroll;
+    
+    /*overflow: scroll;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: auto;*/
 
     /*scrollbar for firefox */
     /*scrollbar-width: thin;
